Tidy up 404.html

--- a/404.html
+++ b/404.html
@@ -1,15 +1,13 @@
 ---
 title: Page not found
+description: Sorry, the page requested was not found.
 layout: master
 ---
 
 <div class="container">
     <div class="row">
 
-<h4>Ooops</h4>
-
-<p>Apologies, the page you requested cannot be found. `HTTP 404 error`. In case you were wondering.</p>
-
+<p class="lead text-center">Apologies, the page you requested cannot be found. <code>HTTP 404 error</code>. In case you were wondering.</p>
 
     </div>
 </div>
