--- a/_posts/2012-09-22-mr-correcter.html
+++ b/_posts/2012-09-22-mr-correcter.html
@@ -77,6 +77,7 @@ description: The replies to the Twitter user Mr Correcter who was an automated a
 <link href='https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.css' rel='stylesheet' />
 <script src='https://api.tiles.mapbox.com/mapbox.js/v1.6.3/mapbox.js'></script>
 <script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-omnivore/v0.1.2/leaflet-omnivore.min.js'></script>
+<script src='https://api.tiles.mapbox.com/mapbox.js/plugins/leaflet-hash/v0.2.1/leaflet-hash.js'></script>
 
 <script>
 
@@ -97,6 +98,7 @@ window.onload=function(){
   var map = L.mapbox.map('map', 'roberto-murray.iemmd4mf')
     .setView([27.68, -68.20], 3);
   map.zoomControl.setPosition('topright');
+  var hash = L.hash(map);
 
   omnivore.csv('/data/mr-c-replies.csv')
     .on('ready', function(layer) {
